-
Bug
-
Resolution: Done
-
P2: Important
-
6.1.2
-
None
-
a65727e3b7be8dfc975fa675b798a08b043117d9 (qt/qtvirtualkeyboard/6.2.0)
The generic API for adding dictionaries is not documented but referred to in the public API docs.
| For Gerrit Dashboard: QTBUG-95893 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 365896,7 | Add missing documentation for the dictionary API | dev | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |
| 367242,2 | Add missing documentation for the dictionary API | 6.2 | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |
| 367243,2 | Add missing documentation for the dictionary API | 6.1 | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |
| 367244,2 | Add missing documentation for the dictionary API | 6.1.3 | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |