Add missing documentation for the dictionary API

Fixes: QTBUG-95893
Pick-to: 6.1 6.1.3 6.2
Change-Id: I4b3bd72caff39935fc85f19bb5f25d802f23abb3
Reviewed-by: Venugopal Shivashankar <Venugopal.Shivashankar@qt.io>